tests/fail/eksiksiz-örüntü-dördüncü.kip
(bu tam-sayı listesinin) dördüncüsü,
  bu, a'nın (b'nin (c'nin (d'nin e'ye ekine) ekine) ekine) ekiyse, d'dir.
